feat: Add basic content structure

--- a/index.html
+++ b/index.html
@@ -12,6 +12,164 @@
     <meta name="keywords" content="Outpost, Edge, Tech, Cypherpunk" />
   </head>
   <body>
-    <h1 title="A secret message!">Welcome to the Outpost!</h1>
+    <header>
+      <a href="#"><h1>The Outpost</h1></a>
+
+      <nav>
+        <ul>
+          <li>
+            <a href="#mission">Mission</a>
+          </li>
+          <li>
+            <a href="#airish">Airish</a>
+          </li>
+          <li>
+            <a href="#theorish">Theorish</a>
+          </li>
+          <li>
+            <a href="#waveish">Waveish</a>
+          </li>
+          <li>
+            <a href="#socials">Socials</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section id="mission">
+        <h2>Mission</h2>
+
+        <p>
+          Here at Outpost, our goals are multi-faceted. Our general works can be
+          divided into <strong>three pillars</strong>:
+        </p>
+
+        <ol>
+          <li>
+            <dl>
+              <dt><a href="#airish">Airish</a></dt>
+              <dd>Livestreams from the edge of the internet.</dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt><a href="#theorish">Theorish</a></dt>
+              <dd>
+                Articles on theories and societal analysis on everything web.
+              </dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt><a href="#waveish">Waveish</a></dt>
+              <dd>A podcast on politics and tech.</dd>
+            </dl>
+          </li>
+        </ol>
+      </section>
+
+      <section id="theorish">
+        <h2>Theorish</h2>
+
+        <article>
+          <header>
+            <h3>Googleing Bookchin - in 2020</h3>
+          </header>
+
+          <h4>Introduction</h4>
+
+          <p>
+            Bookchin, everyone's favorite philosopher of the late 20th century,
+            is still relevant today. Don't think so? Let us change your mind!
+          </p>
+
+          <p>
+            With the recent
+            <a href="https://www.youtube.com/watch?v=uH7lACpnmYY"
+              >demonstrations for racial justice in the US and many other
+              countries</a
+            >, the question of the role of the state in perpetuating systems of
+            opression has once again risen into public discourse. That's great!
+            In order to however not use the fallacy of
+            <a
+              href="http://theanarchistlibrary.org/library/murray-bookchin-social-anarchism-or-lifestyle-anarchism-an-unbridgeable-chasm"
+              >Lifestyle Anarchism</a
+            >, let's <em>ground our axioms first</em> - by revisiting Bookchin
+            himself.
+          </p>
+
+          <a href="/articles/bookchin-2020">Read more</a>
+
+          <footer>
+            <h4>Selected Works</h4>
+
+            <table>
+              <thead>
+                <tr>
+                  <th>
+                    Name
+                  </th>
+                  <th>
+                    Address
+                  </th>
+                </tr>
+              </thead>
+
+              <tbody>
+                <tr>
+                  <th>
+                    The Ecology of Freedom
+                  </th>
+                  <th>
+                    <a
+                      href="https://en.wikipedia.org/wiki/The_Ecology_of_Freedom"
+                      target="_blank"
+                      >Wikipedia</a
+                    >
+                  </th>
+                </tr>
+                <tr>
+                  <th>
+                    Post-Scarcity Anarchism
+                  </th>
+                  <th>
+                    <a
+                      href="https://en.wikipedia.org/wiki/Post-Scarcity_Anarchism"
+                      target="_blank"
+                      >Wikipedia</a
+                    >
+                  </th>
+                </tr>
+              </tbody>
+            </table>
+          </footer>
+        </article>
+      </section>
+    </main>
+
+    <footer>
+      <a href="https://www.gnu.org/licenses/agpl-3.0.en.html" target="_blank"
+        >© 2020 Felicitas Pojtinger</a
+      >
+
+      <nav id="socials">
+        <ul>
+          <li>
+            <a href="https://felicitas.pojtinger.com/imprint/" target="_blank"
+              >Imprint</a
+            >
+          </li>
+          <li>
+            <a href="https://twitter.com/outpost" target="_blank">Twitter</a>
+          </li>
+          <li>
+            <a href="https://instagram.com/outpost" target="_blank"
+              >Instagram</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
