feat: Add mathematical formula

--- a/index.html
+++ b/index.html
@@ -72,79 +72,140 @@
       <section id="theorish">
         <h2>Theorish</h2>
 
-        <article>
-          <header>
-            <h3>Googleing Bookchin - in 2020</h3>
-          </header>
+        <ul>
+          <li>
+            <article>
+              <header>
+                <h3>Googleing Bookchin - in 2020</h3>
+              </header>
 
-          <h4>Introduction</h4>
+              <h4>Introduction</h4>
 
-          <p>
-            Bookchin, everyone's favorite philosopher of the late 20th century,
-            is still relevant today. Don't think so? Let us change your mind!
-          </p>
+              <p>
+                Bookchin, everyone's favorite philosopher of the late 20th
+                century, is still relevant today. Don't think so? Let us change
+                your mind!
+              </p>
 
-          <p>
-            With the recent
-            <a href="https://www.youtube.com/watch?v=uH7lACpnmYY"
-              >demonstrations for racial justice in the US and many other
-              countries</a
-            >, the question of the role of the state in perpetuating systems of
-            opression has once again risen into public discourse. That's great!
-            In order to however not use the fallacy of
-            <a
-              href="http://theanarchistlibrary.org/library/murray-bookchin-social-anarchism-or-lifestyle-anarchism-an-unbridgeable-chasm"
-              >Lifestyle Anarchism</a
-            >, let's <em>ground our axioms first</em> - by revisiting Bookchin
-            himself.
-          </p>
+              <p>
+                With the recent
+                <a href="https://www.youtube.com/watch?v=uH7lACpnmYY"
+                  >demonstrations for racial justice in the US and many other
+                  countries</a
+                >, the question of the role of the state in perpetuating systems
+                of opression has once again risen into public discourse. That's
+                great! In order to however not use the fallacy of
+                <a
+                  href="http://theanarchistlibrary.org/library/murray-bookchin-social-anarchism-or-lifestyle-anarchism-an-unbridgeable-chasm"
+                  >Lifestyle Anarchism</a
+                >, let's <em>ground our axioms first</em> - by revisiting
+                Bookchin himself.
+              </p>
 
-          <a href="/articles/bookchin-2020">Read more</a>
+              <a href="/articles/bookchin-2020">Read more</a>
 
-          <footer>
-            <h4>Selected Works</h4>
+              <footer>
+                <h4>Selected Works</h4>
 
-            <table>
-              <thead>
-                <tr>
-                  <th>
-                    Name
-                  </th>
-                  <th>
-                    Address
-                  </th>
-                </tr>
-              </thead>
+                <table>
+                  <thead>
+                    <tr>
+                      <th>
+                        Name
+                      </th>
+                      <th>
+                        Address
+                      </th>
+                    </tr>
+                  </thead>
 
-              <tbody>
-                <tr>
-                  <th>
-                    The Ecology of Freedom
-                  </th>
-                  <th>
-                    <a
-                      href="https://en.wikipedia.org/wiki/The_Ecology_of_Freedom"
-                      target="_blank"
-                      >Wikipedia</a
-                    >
-                  </th>
-                </tr>
-                <tr>
-                  <th>
-                    Post-Scarcity Anarchism
-                  </th>
-                  <th>
-                    <a
-                      href="https://en.wikipedia.org/wiki/Post-Scarcity_Anarchism"
-                      target="_blank"
-                      >Wikipedia</a
-                    >
-                  </th>
-                </tr>
-              </tbody>
-            </table>
-          </footer>
-        </article>
+                  <tbody>
+                    <tr>
+                      <th>
+                        The Ecology of Freedom
+                      </th>
+                      <th>
+                        <a
+                          href="https://en.wikipedia.org/wiki/The_Ecology_of_Freedom"
+                          target="_blank"
+                          >Wikipedia</a
+                        >
+                      </th>
+                    </tr>
+                    <tr>
+                      <th>
+                        Post-Scarcity Anarchism
+                      </th>
+                      <th>
+                        <a
+                          href="https://en.wikipedia.org/wiki/Post-Scarcity_Anarchism"
+                          target="_blank"
+                          >Wikipedia</a
+                        >
+                      </th>
+                    </tr>
+                  </tbody>
+                </table>
+              </footer>
+            </article>
+          </li>
+          <li>
+            <article>
+              <header>
+                <h3>Revisiting Kropotkin and the role of modernism</h3>
+              </header>
+
+              <h4>Introduction</h4>
+
+              <p>
+                Want to know why we call it <strong>Breadtube</strong>? Read on!
+              </p>
+
+              <p>
+                <a href="https://en.wikipedia.org/wiki/Peter_Kropotkin"
+                  >Peter Kropotkin</a
+                >
+                is a name that should be familliar to anyone with some interest
+                in politics. You may have seen the following equation:
+                &sum;&smt;&forall; If you're interested, continue reading!
+              </p>
+
+              <a href="/articles/peter-kropotkin-modernism">Read more</a>
+
+              <footer>
+                <h4>Selected Works</h4>
+
+                <table>
+                  <thead>
+                    <tr>
+                      <th>
+                        Name
+                      </th>
+                      <th>
+                        Address
+                      </th>
+                    </tr>
+                  </thead>
+
+                  <tbody>
+                    <tr>
+                      <th>
+                        The Conquest of Bread
+                      </th>
+                      <th>
+                        <a
+                          href="https://en.wikipedia.org/wiki/The_Conquest_of_Bread"
+                          target="_blank"
+                          >Wikipedia</a
+                        >
+                      </th>
+                    </tr>
+                  </tbody>
+                </table>
+              </footer>
+            </article>
+          </li>
+        </ul>
       </section>
     </main>
 
