feat: Add code until exercise 10

--- a/index.html
+++ b/index.html
@@ -205,6 +205,100 @@
               </footer>
             </article>
           </li>
+          <li>
+            <article>
+              <header>
+                <h3>Science, code and Rojava</h3>
+              </header>
+
+              <h4>Introduction</h4>
+
+              <p>
+                Rojava? Code? Sounds great!
+              </p>
+
+              <p>
+                <a href="https://en.wikipedia.org/wiki/Rojava">Rojava</a>, or
+                more formally the Autonomous Administration of North and East
+                Syria (NES), is probably one of the most promising
+                anarchist/libertarian projects as of 2020. You may be asking:
+                How did they succeed in their project?
+              </p>
+
+              <p>
+                To explain this, let's take a look at the following two code
+                examples:
+              </p>
+
+              <pre>
+                      <code>
+// TypeScript
+[1,2,3].map((a, i) => a * i)
+                      </code>
+                  </pre>
+
+              <pre>
+                      <code>
+// Ruby
+[1,2,3].map | a, i | a * i
+                      </code>
+                  </pre>
+
+              <p>
+                An this quote:
+              </p>
+
+              <blockquote>
+                <p>
+                  The assumption that what currently exists must necessarily
+                  exist is the acid that corrodes all visionary thinking.
+                </p>
+
+                <footer>
+                  <cite
+                    ><a href="https://en.wikiquote.org/wiki/Murray_Bookchin"
+                      >"The Meaning of Confederalism"</a
+                    ></cite
+                  >
+                  by Murray Bookchin.
+                </footer>
+              </blockquote>
+
+              <a href="/articles/science-code-rojava">Read more</a>
+
+              <footer>
+                <h4>Selected Works</h4>
+
+                <table>
+                  <thead>
+                    <tr>
+                      <th>
+                        Name
+                      </th>
+                      <th>
+                        Address
+                      </th>
+                    </tr>
+                  </thead>
+
+                  <tbody>
+                    <tr>
+                      <th>
+                        The Conquest of Bread
+                      </th>
+                      <th>
+                        <a
+                          href="https://en.wikipedia.org/wiki/The_Conquest_of_Bread"
+                          target="_blank"
+                          >Wikipedia</a
+                        >
+                      </th>
+                    </tr>
+                  </tbody>
+                </table>
+              </footer>
+            </article>
+          </li>
         </ul>
       </section>
     </main>
