feat: Add airish and spanish translation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <a href="#"><h1>The Outpost</h1></a>
+      <a href="/"><h1>The Outpost</h1></a>
 
       <nav>
         <ul>
@@ -21,7 +21,7 @@
             <a href="#mission">Mission</a>
           </li>
           <li>
-            <a href="#airish">Airish</a>
+            <a href="/airish">Airish</a>
           </li>
           <li>
             <a href="#theorish">Theorish</a>
@@ -48,7 +48,7 @@
         <ol>
           <li>
             <dl>
-              <dt><a href="#airish">Airish</a></dt>
+              <dt><a href="/airish">Airish</a></dt>
               <dd>Livestreams from the edge of the internet.</dd>
             </dl>
           </li>
