feat: Add images

--- a/airish.html
+++ b/airish.html
@@ -37,6 +37,14 @@
     <main>
       <h2>Airish</h2>
 
+      <figure>
+        <img
+          src="https://source.unsplash.com/random?air"
+          alt="An image of air"
+        />
+        <figcaption>Air - our medium.</figcaption>
+      </figure>
+
       <p>
         Watch us on the following platforms:
       </p>
@@ -83,6 +91,14 @@
           </li>
         </ul>
       </nav>
+
+      <figure>
+        <img
+          src="https://source.unsplash.com/random?water"
+          alt="An image of water"
+        />
+        <figcaption>Water - our second medium.</figcaption>
+      </figure>
     </footer>
   </body>
 </html>
