--- a/airish-es.html
+++ b/airish-es.html
@@ -34,6 +34,14 @@
     <main>
       <h2>Airish</h2>
 
+      <figure>
+        <img
+          src="https://source.unsplash.com/random?air"
+          alt="Una imagen de aire"
+        />
+        <figcaption>Una imagen de aire.</figcaption>
+      </figure>
+
       <p>
         Míranos en las siguientes plataformas:
       </p>
@@ -80,6 +88,14 @@
           </li>
         </ul>
       </nav>
+
+      <figure>
+        <img
+          src="https://source.unsplash.com/random?water"
+          alt="Una imagen de agua"
+        />
+        <figcaption>Una imagen de agua.</figcaption>
+      </figure>
     </footer>
   </body>
 </html>
