feat: Add image map navigation to index

--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
           </li>
         </ul>
       </nav>
+
+      <img src="/img/a-t-w.png" alt="Visual Navigation" usemap="#navmap" />
+
+      <map name="navmap">
+        <area
+          shape="poly"
+          coords="0,0,0,540,270,270,270,0"
+          href="/airish"
+          alt="Airish"
+        />
+        <area
+          shape="poly"
+          coords="540,0,540,540,270,270,270,0"
+          href="#theorish"
+          alt="Theorish"
+        />
+        <area
+          shape="poly"
+          coords="0,540,540,540,270,270"
+          href="#waveish"
+          alt="Waveish"
+        />
+      </map>
     </header>
 
     <main>
