--- a/index.html
+++ b/index.html
@@ -324,6 +324,22 @@
           </li>
         </ul>
       </section>
+
+      <section id="waveish">
+        <h2>Waveish</h2>
+
+        <video preload="metadata" controls>
+          <source
+            src="https://www.w3schools.com/html/mov_bbb.mp4"
+            type="video/mp4"
+          />
+          <source
+            src="https://www.w3schools.com/html/mov_bbb.ogg"
+            type="video/ogg"
+          />
+          Please use a <a href="https://choosebrowser.com">modern browser</a>.
+        </video>
+      </section>
     </main>
 
     <footer>
