feat: Add audio embed

--- a/index.html
+++ b/index.html
@@ -328,14 +328,26 @@
       <section id="waveish">
         <h2>Waveish</h2>
 
-        <video preload="metadata" controls>
+        <audio preload="metadata" controls>
           <source
-            src="https://www.w3schools.com/html/mov_bbb.mp4"
-            type="video/mp4"
+            src="https://www.w3schools.com/html/horse.ogg"
+            type="audio/ogg"
           />
+          <source
+            src="https://www.w3schools.com/html/horse.mp3"
+            type="audio/mpeg"
+          />
+          Please use a <a href="https://choosebrowser.com">modern browser</a>.
+        </audio>
+
+        <video preload="metadata" controls>
           <source
             src="https://www.w3schools.com/html/mov_bbb.ogg"
             type="video/ogg"
+          />
+          <source
+            src="https://www.w3schools.com/html/mov_bbb.mp4"
+            type="video/mp4"
           />
           Please use a <a href="https://choosebrowser.com">modern browser</a>.
         </video>
