feat: Add YouTube embed

--- a/index.html
+++ b/index.html
@@ -351,6 +351,8 @@
           />
           Please use a <a href="https://choosebrowser.com">modern browser</a>.
         </video>
+
+        <object data="https://www.youtube.com/embed/MHE4LEKGFt8"> </object>
       </section>
     </main>
 
