feat: Add basic styles

--- a/airish.html
+++ b/airish.html
@@ -11,6 +11,7 @@
     />
     <meta name="keywords" content="Outpost, Edge, Tech, Cypherpunk" />
     <link rel="alternate" href="/airish-es.html" hreflang="es" />
+    <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
     <header>
@@ -19,19 +20,42 @@
       <nav>
         <ul>
           <li>
-            <a href="/airish">Airish</a>
+            <a href="#">Airish</a>
           </li>
           <li>
-            <a href="#theorish">Theorish</a>
+            <a href="/#theorish">Theorish</a>
           </li>
           <li>
-            <a href="#waveish">Waveish</a>
+            <a href="/#waveish">Waveish</a>
           </li>
           <li>
-            <a href="#socials">Socials</a>
+            <a href="/#socials">Socials</a>
           </li>
         </ul>
       </nav>
+
+      <img src="/img/a-t-w.png" alt="Visual Navigation" usemap="#navmap" />
+
+      <map name="navmap">
+        <area
+          shape="poly"
+          coords="0,0,0,540,270,270,270,0"
+          href="#"
+          alt="Airish"
+        />
+        <area
+          shape="poly"
+          coords="540,0,540,540,270,270,270,0"
+          href="/#theorish"
+          alt="Theorish"
+        />
+        <area
+          shape="poly"
+          coords="0,540,540,540,270,270"
+          href="/#waveish"
+          alt="Waveish"
+        />
+      </map>
     </header>
 
     <main>
