--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       content="A site from the outpost of the internet"
     />
     <meta name="keywords" content="Outpost, Edge, Tech, Cypherpunk" />
+    <link rel="stylesheet" href="/main.css" />
   </head>
   <body>
     <header>
